# ofs3.old

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
shaders/: body-fs.glsl  body-vs.glsl  star-fs.glsl  star-vs.glsl
src/: CMakeLists.txt
src/engine/: engine.cpp  engine.h  frame.cpp  frame.h  object.cpp  object.h  player.cpp  player.h  time.cpp  time.h
src/main/: core.h  coreapp.cpp  coreapp.h  main.cpp  math.h
src/main/sdl2/: core.h  coreapp.h  main.cpp
src/render/: camera.cpp  camera.h  olentry.h  overlay.cpp  overlay.h  renderprm.h  scene.cpp  scene.h  starcolors.cpp  starcolors.h  stars.cpp  stars.h  surface.cpp  surface.h  system.cpp
src/render/gl/: buffer.cpp  buffer.h  context.cpp  context.h  font.cpp  font.h  mesh.cpp  mesh.h  shader.cpp  shader.h  stars.cpp  stars.h  texture.cpp  texture.h
src/tools/stardb/: CMakeLists.txt  buildstars.cpp
src/universe/: asterisms.cpp  asterisms.h  astro.cpp  astro.h  body.cpp  frame.cpp  frame.h  handler.h  object.h  star.cpp  stardb.cpp  stardb.h  startree.cpp  startree.h  surface.cpp  surface.h  universe.cpp  universe.h
src/util/: color.h  fix128.cpp
