set (ofs_cpp_srcs
	engine/engine.cpp
	engine/frame.cpp
	engine/object.cpp
	engine/player.cpp
	engine/time.cpp
	main/sdl2/main.cpp
	main/coreapp.cpp
	render/gl/buffer.cpp
	render/gl/context.cpp
	render/gl/mesh.cpp
	render/gl/shader.cpp
	render/gl/stars.cpp
	render/gl/texture.cpp
	render/camera.cpp
	render/scene.cpp
	render/starcolors.cpp
	render/stars.cpp
	render/surface.cpp
	render/system.cpp
	universe/asterisms.cpp
	universe/astro.cpp
	universe/body.cpp
	universe/star.cpp
	universe/stardb.cpp
	universe/startree.cpp
	universe/star.cpp
	universe/universe.cpp
	util/fix128.cpp
	util/tree.cpp

)

set (ofs_h_srcs
	engine/engine.h
	engine/frame.h
	engine/object.h
	engine/player.h
	engine/time.h
	main/sdl2/coreapp.h
	main/core.h
	main/coreapp.h
	render/gl/buffer.h
	render/gl/context.h
	render/gl/mesh.h
	render/gl/shader.h
	render/gl/stars.h
	render/gl/texture.h
	render/camera.h
	render/scene.h
	render/starcolors.h
	render/stars.h
	render/surface.h
	universe/asterisms.h
	universe/astro.h
	universe/object.h
	universe/stardb.h
	universe/startree.h
	universe/universe.h
	util/color.h
	util/fix128.h
	util/tree.h
)

include_directories(
	${SDL2_INCLUDE_DIRS}
	${OPENGL_INCLUDE_DIRS}
	${GLEW_INCLUDE_DIRS}
	${FREETYPE_INCLUDE_DIRS}
)

add_executable(ofs ${ofs_cpp_srcs} ${ofs_h_srcs})
target_link_libraries(ofs
	SDL2::Main
	SDL2::Image
	GLEW::GLEW
	Freetype::Freetype
	fmt::fmt
)